<resources>
    <string name="app_name">iCl2 Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="sdk_version_is">SDK version:\n %s</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="service_id">Service ID</string>
    <string name="use_external">Use external provisioning</string>
    <string name="service_key">Service Key</string>
    <string name="secret">Secret</string>
    <string name="token">Token</string>
    <string name="provisioning_server">Provisioning Server</string>
    <string name="api_server">API Server</string>
    <string name="turn_server">TURN Server</string>
    <string name="turn_username">TURN Username</string>
    <string name="turn_credential">TURN Credential</string>
    <string name="camera">Camera</string>
    <string name="prefer_front_camera">Camera facing</string>
    <string name="microphone">Mic</string>
    <string name="speaker">Speaker</string>
    <string name="room">Room</string>
    <string name="require_permission_arg">Require permission: %s</string>
    <string name="app_settings">App settings</string>
    <string name="front">Front</string>
    <string name="rear">Rear</string>
    <string name="no_room_id">Room ID is not set</string>
    <string name="layout">Layout</string>
    <string name="videos">Videos</string>
    <string name="layout_1x1">1x1</string>
    <string name="layout_2x1">2x1</string>
    <string name="layout_2x2">2x2</string>
    <string name="layout_3x2">3x2</string>
    <string name="layout_4x2">4x2</string>
    <string name="title_pick_videos">Pick videos</string>
    <string name="screen">Screen</string>
    <string name="audio">Audio</string>
    <string name="message">Message</string>
    <string name="send">SEND</string>
    <string name="always_on">Always on</string>
    <string name="my_pid_is_arg">Participant ID: %s</string>
    <string name="preferences">Preferences</string>
    <string name="stop">stop</string>
    <string name="message_stop_conference">Stop conference?</string>
    <string name="title_ongoing_meeting">Video conference in progress</string>
    <string name="notification_channel_name">Video conference</string>
    <string name="close">Close</string>
    <string name="please_input_message">please input message</string>
    <string name="send_message">Send Message</string>
</resources>